# autopkg-wrapper

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  LICENSE  README.md  TODO.md  mise.toml  opencode.jsonc  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-publish-to-pypi.yml  build-publish.yml  codeql.yml  create-release-tag.yml  dependency-review.yml  publish-to-pypi.yml  tag-release.yml
actions-demo/: repo_list.txt  requirements.txt
actions-demo/.github/workflows/: autopkg-wrapper-demo.yml
actions-demo/overrides/: Google_Chrome.pkg.recipe.yaml
autopkg_wrapper/: autopkg_tools.py  autopkg_wrapper.py
autopkg_wrapper/models/: recipe.py
autopkg_wrapper/notifier/: slack.py
autopkg_wrapper/utils/: args.py  autopkg_recipe_tidy.py  git_functions.py  logging.py  recipe_batching.py  recipe_ordering.py  report_processor.py
docs/: recipe-identifier-parsing.md
scripts/: generate_cli_docs.py
tests/: prefs.json  prefs.plist  recipe_list.json  recipe_list.txt  recipe_list.yaml  test_args_utils.py  test_autopkg_commands.py  test_env_blank_strings.py  test_git_functions.py  test_glob_patterns.py  test_needs_git_updates.py  test_order_recipe_list.py  test_parse_recipe_list.py  test_process_recipe.py  test_report_processor.py  test_setup_logger.py  test_slack_notifier.py  test_update_trust_only.py
