[project]
name = "autopkg-wrapper"
version = "0.0.0"
description = "A package used to execute some autopkg functions, primarily within the context of a GitHub Actions runner."
readme = "README.md"
requires-python = "~=3.12.0"
license = "BSD-3-Clause"
authors = [{ name = "James Smith", email = "james@smithjw.me" }]
dependencies = [
  "chardet",
  "idna",
  "pygithub",
  "requests",
  "ruamel-yaml",
  "toml",
  "urllib3",
]

[project.urls]
Repository = "https://github.com/smithjw/autopkg-wrapper"

[project.scripts]
autopkg_wrapper = "autopkg_wrapper.autopkg_wrapper:main"

[dependency-groups]
dev = [
  "uv-bump>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
