[project]
name = "autopkg-wrapper"
version = "0.0.0"
description = "A package used to execute some autopkg functions, primarily within the context of a GitHub Actions runner."
readme = "README.md"
requires-python = "~=3.14.0"
license = "BSD-3-Clause"
authors = [{ name = "James Smith", email = "james@smithjw.me" }]
dependencies = [
  "idna",
  "jamf-pro-sdk",
  "pygithub",
  "requests",
  "ruamel-yaml",
  "toml",
  "urllib3>=2.5.0",  # Minimum version for security fixes (CVE-2025-50181, CVE-2025-50182)
]

[project.urls]
Repository = "https://github.com/smithjw/autopkg-wrapper"

[project.scripts]
autopkg_wrapper = "autopkg_wrapper.autopkg_wrapper:main"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "uv-bump",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
